--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -40,14 +40,13 @@
         <div class="main_text text">
             당신 근처의 Karrot 마켓
         </div>
-        <!--TODO 회원가입 -->
         <div class="sub_text text">
             이제 내 동네에서 </br> 간편하게 중고거래하자
         </div>
     </div>
 
     <div class="bottom_container">
-        <button class="button_box">시작하기</button>
+        <button class="button_box" onclick="location.href='/user/register'">시작하기</button>
         <div class="text sub_text">이미 계정이 있나요?
             <a href="/login">로그인</a>
         </div>
