--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -30,7 +30,7 @@
         .bottom_container{
             margin-top: 500px;
         }
-        .form{
+        .container{
             padding: 100px;
         }
         div, input{
@@ -49,7 +49,8 @@
 <body>
 <div>
     <div style="padding: 100px 0px 0px 100px">회원 가입</div>
-    <form th:action="@{/users}" method="post" class="form">
+    <!--<form th:action="@{/users}" method="post" class="container">-->
+    <div class="container">
         <div class="box">
             <div>이메일(ID)</div>
             <input type="text" name="email" />
@@ -71,8 +72,36 @@
             <input type="text" name="nickname" />
         </div>
 
-        <button class="button_box" type="submit">가입하기</button>
-    </form>
+        <button class="button_box" onclick="registerUser();">가입하기</button>
+    </div>
 </div>
-
 </body>
+<script>
+    function getValueByName(name){
+        return document.getElementsByName(name)[0].value
+    }
+
+    function registerUser(){
+        var xhr = new XMLHttpRequest();
+        var formData = new FormData();
+
+        formData.append('email', getValueByName('email'));
+        formData.append('password', getValueByName('password'));
+        formData.append('username', getValueByName('username'));
+        formData.append('phone', getValueByName('phone'));
+        formData.append('nickname', getValueByName('nickname'));
+
+        xhr.onload = function() {
+            if (xhr.status === 200 || xhr.status === 201) {
+                console.log(xhr.responseText);
+                location.href = "/";
+            } else {
+                console.error(xhr.responseText);
+                alert("이미 가입된 이메일 혹은 전화번호입니다.")
+            }
+        };
+        xhr.open('POST', '/users');
+        xhr.send(formData); // 폼 데이터 객체 전송
+    }
+
+</script>
