Feat: 세션 기반 로그인 구현

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -71,6 +71,7 @@
         xhr.onload = function() {
             if (xhr.status === 200 || xhr.status === 201) {
                 console.log(xhr.responseText);
+                alert("로그인에 t성공.")
                 location.href = "/items";
             } else {
                 console.error(xhr.responseText);
