Feat: 메인 페이지, 회원가입 url 변경

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="bottom_container">
-        <button class="button_box" onclick="location.href='/user/register'">시작하기</button>
+        <button class="button_box" onclick="location.href='/signup'">시작하기</button>
         <div class="text sub_text">이미 계정이 있나요?
             <a href="/login">로그인</a>
         </div>
