Fix: 오류 안내 알림 텍스트 수정

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -70,12 +70,10 @@
 
         xhr.onload = function() {
             if (xhr.status === 200 || xhr.status === 201) {
-                console.log(xhr.responseText);
-                alert("로그인에 t성공.")
+                alert("로그인에 성공했습니다..")
                 location.href = "/items";
             } else {
-                console.error(xhr.responseText);
-                alert("로그인에 실패했습니다.")
+                alert("아이디 혹은 비밀번호가 올바르지 않습니다..")
             }
         };
         xhr.open('POST', '/users/login');
