--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -80,6 +80,23 @@
             width: 150px;
             height: 150px;
         }
+        .upload_button{
+            position: absolute;
+            bottom: 300px;
+            right: 100px;
+            background-color: orange;
+            width:150px;
+            height:150px;
+            border-radius:75px;
+            text-align:center;
+            margin:0 auto;
+            vertical-align:middle;
+            line-height:170px;
+            cursor: pointer;
+
+            font-size: 200px;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -116,15 +133,20 @@
         </div>
     </div>
     <div class="bottom-nav">
-        <button>
-            <img th:if="" src="img/home_filled.png" />
+        <button onclick="reload();">
             <img src="img/home_filled.png" />
         </button>
-        <button>
+        <button onclick="location.href = '/mypage'">
             <img src="img/person.png" />
         </button>
     </div>
 
-</div>
+    <span class="upload_button" onclick="location.href = '/items/upload'">+</span>
 
+</div>
 </body>
+<script>
+    function reload(){
+        window.location.reload();
+    }
+</script>
