Feat: 중고거래 상세 페이지
리스트 클릭 시 이동, 페이지 내부 구현

--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -112,7 +112,7 @@
             </span>
         </div>
         <div>
-            <div th:each="item : ${items}" class="item">
+            <div th:each="item : ${items}" class="item" th:onclick="'location.href=\'' + '/items/' + @{${item.id}} + '\''">
                 <span class="item_img">
                     <img src="img/karrot.png"/>
                 </span>
