--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
     <style>
         .container{
             min-height: 97vh;
             display: flex;
             flex-direction: column;
             /*justify-content: space-between;*/
+            margin-bottom: 200px;
         }
         div span {
             font-size: 50px;
@@ -77,15 +77,15 @@
             padding-top: 100%; /* 1:1 ratio */
             overflow: hidden;
         }
-        .img {
+        .thumbnail > img {
             position: absolute;
-            top: 0; left: 0; right: 0; bottom: 0;
+            /*top: 0; left: 0; right: 0; bottom: 0;*/
             max-width: 100%;
             height: auto;
         }
 
         .uploader-items {
-            display: flex;
+            /*display: flex;*/
             border-top: solid lightgrey;
             width: 100vw;
             align-items: center;
@@ -93,10 +93,56 @@
         }
         .related-item-container{
             width: 100%;
+            display: flex;;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .related-item {
+            width: 40%;
+            padding: 5%;
             display: flex;
+            flex-direction: column;
             align-items: center;
         }
+        .related-item > img {
+            width: 100%;
+            height: 100%;
+            border: 1px solid grey;
+        }
+        .related-item > span {
+            padding-left: 50px;
+            padding-top: 10px;
+            width: 100%;
+        }
+        .local-nav {
+            position: fixed;
+            bottom: 0px;
+            left: 0;
+            height: 200px;
+            width: 100%;
+            background-color: blueviolet;
+        }
+        .local-nav-links {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            height: 100%;
+        }
+
+        .local-nav-items {
+            font-size: 10px;
+        }
+        .local-nav-sticky .local-nav {
+            position: fixed;
+            bottom: 0px;
+            border-bottom: 0.001px solid #e5e8eb;
+            background-color: blueviolet;
+        }
+
+
+
     </style>
+    <meta charset="utf-8">
 </head>
 <body>
 <div class="container">
@@ -108,43 +154,68 @@
         <div class="thumbnail"> <img class="img" src="/img/karrot.png"/> </div>
 
     </div>
-        <div class="top-nav">
-            <span class="buttons">
-                <span>백</span>
-                <span>홈</span>
-            </span>
-        </div>
-        <div class="uploader">
-            <img class="profile-image" src="/img/karrot.png"/>
-            <span th:text="${item.uploader.nickname}"></span>
-        </div>
+    <div class="top-nav">
+        <span class="buttons">
+            <span>백</span>
+            <span>홈</span>
+        </span>
+    </div>
+    <div class="uploader">
+        <img class="profile-image" src="/img/karrot.png"/>
+        <span th:text="${item.uploader.nickname}"></span>
+    </div>
 
+    <div class="row">
+        <span style="width:100%" th:text="${item.title}"></span>
+        <span style="width:100%" th:text="${item.price}"></span>
+    </div>
+    <div class="row">
+        <span style="width:100%" th:text="${item.category}"></span>
+        <span style="width:100%" th:text="${item.whenUploaded}"></span>
+    </div>
+    <div class="row">
+        <span style="width:100%" th:text="${item.mainText}"></span>
+    </div>
+    <div class="row">
+        <span style="width:100%">관심 </span>
+    </div>
+    <div class="uploader-items">
         <div class="row">
-            <span style="width:100%" th:text="${item.title}"></span>
-            <span style="width:100%" th:text="${item.price}"></span>
+            <span style="width:100vw"> [[${item.uploader.nickname}]]님의 판매상품</span>
+            <span style="width: 50%">모두보기 </span>
         </div>
-        <div class="row">
-            <span style="width:100%" th:text="${item.category}"></span>
-            <span style="width:100%" th:text="${item.whenUploaded}"></span>
-        </div>
-        <div class="row">
-            <span style="width:100%" th:text="${item.mainText}"></span>
-        </div>
-        <div class="row">
-            <span style="width:100%">관심 </span>
-        </div>
-        <div class="uploader-items">
-            <div class="row">
-                <span style="width:100vw"> [[${item.uploader.nickname}]]님의 판매상품</span>
-                <span style="width: 50%">모두보기 </span>
+        <div class="related-item-container">
+            <div class="related-item">
+                <img src="/img/karrot.png"/>
+                <span>제목</span>
+                <span>가격</span>
             </div>
-            <div class="related-item-container">
-                <img class="profile-image" src="/img/karrot.png"/>
-                <!--TODO: 이미지 추가하기-->
-
+            <div class="related-item">
+                <img src="/img/karrot.png"/>
+                <span>제목</span>
+                <span>가격</span>
+            </div>
+            <div class="related-item">
+                <img src="/img/karrot.png"/>
+                <span>제목</span>
+                <span>가격</span>
+            </div>
+            <div class="related-item">
+                <img src="/img/karrot.png"/>
+                <span>제목</span>
+                <span>가격</span>
             </div>
         </div>
+    </div>
 
+    <nav class="local-nav">
+        <div class="local-nav-links">
+            <div class="local-nav-items">local item1</div>
+            <div class="local-nav-items">local item2</div>
+            <div class="local-nav-items">local item3</div>
+            <div class="local-nav-items">local item4</div>
+        </div>
+    </nav>
 
 </div>
 </body>
@@ -152,4 +223,25 @@
     function reload(){
         window.location.reload();
     }
+    let yOffset = window;
+
+    const navGlobalFixed = () => {
+        if (yOffset > 0) {
+            document.body.classList.add("local-nav-sticky");
+        } else {
+            document.body.classList.remove("local-nav-sticky");
+        }
+    };
+
+    const load = () => {
+        window.addEventListener("load", () => {
+            window.addEventListener("scroll", () => {
+                yOffset = window.pageYOffset;
+                console.log("y: " + yOffset);
+                navGlobalFixed();
+            });
+        });
+    };
+
+    load();
 </script>
