Style: 바텀 내비게이션, 컨테이너 크기 수정
바텀 내비에 가려져서 안보이던 문제 해결

--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <style>
         .container{
-            height: 97vh;
+            min-height: 97vh;
             padding-top: 30px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            margin-bottom: 200px;
         }
         div span {
             font-size: 70px;
