Feat: 바텀 내비게이션 페이지 이동 이벤트 추가

--- a/src/main/resources/templates/items/list.html
+++ b/src/main/resources/templates/items/list.html
@@ -153,12 +153,12 @@
     <nav class="local-nav">
         <div class="local-nav-links">
             <div class="local-nav-items">
-                <button>
+                <button onclick="location.href='/items'">
                     <img src="img/home_filled.png" />
                 </button>
             </div>
             <div class="local-nav-items">
-                <button >
+                <button onclick="location.href='/my-page'">
                     <img src="img/person.png" />
                 </button>
             </div>
