--- a/src/main/resources/templates/items/item-view.html
+++ b/src/main/resources/templates/items/item-view.html
@@ -206,7 +206,10 @@
     <div class="uploader-items">
         <div class="row">
             <span style="width:100vw; font-size: 70px "> [[${item.uploader.nickname}]]님의 판매상품</span>
-            <span style="width: 50%; color: darkgrey">모두보기 </span>
+            <span style="width: 50%; color: darkgrey"
+                  th:onclick="'location.href=\'' + '/items/user/' + @{${item.uploader.id}} + '\''">
+                모두보기
+            </span>
         </div>
         <div class="related-item-container">
             <div th:each="item : ${item.uploader.items}" class="related-item" th:onclick="'location.href=\'' + '/items/' + @{${item.id}} + '\''">
