Feat: 로그아웃 구현

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -124,7 +124,7 @@
             <img src="/img/person.png"/>
             <span>[[${user.nickname}]]</span>
         </div>
-        <button class="big-button">프로필 수정</button>
+        <button class="big-button" onclick="location.href = '/my-page/edit'">프로필 수정</button>
     </div>
 
     <div class="row">
@@ -135,7 +135,7 @@
         <img src="/img/heart.png"/>
         <span>관심목록</span>
     </div>
-    <button style="font-size: 70px;">Log out</button>
+    <button style="font-size: 70px;" onclick="location.href = '/logout'">Log out</button>
     <nav class="local-nav">
         <div class="local-nav-links">
             <div class="local-nav-items">
