--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -98,7 +98,7 @@
                 alert("이미 가입된 이메일 혹은 전화번호입니다.")
             }
         };
-        xhr.open('POST', '/users');
+        xhr.open('POST', '/api/users');
         xhr.send(formData); // 폼 데이터 객체 전송
     }
 
